--- a/Task01/Task01_U-Value.ipynb
+++ b/Task01/Task01_U-Value.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "### General Description\n",
     "\n",
-    "The house is a tiny house with 5 m x 5 m **inner** ground area (defined by the inner wall surfaces) with a shed roof. The building has a perfect north-south-orientation such that the roof is inclined to the south.\n",
+    "The house is a tiny house with 5 m x 5 m **inner** ground area (defined by the inner wall surfaces) with a shed roof. The building has a perfect north-south orientation such that the roof is inclined to the south.\n",
     "\n",
     "East and west wall (side walls) have **windows** of 160 cm x 100 cm size, **single glazing**. \n",
     "The north wall has a **wooden entrance door** of 100 cm x 200 cm. The south wall has no opening.\n",
